Make compatible with Jdk11 (#21)
* Remove switch expressions

* Use Collectors.toList on streams

* Remove instanceof direct casts