@@ -3,13 +3,14 @@ package com.jsheets.components.cells;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 public class CellSpan extends ArrayList<Cell<?>> {
   public List<Cell<?>> onlyWithValue() {
     return this
       .stream()
       .filter(c -> c.hasValue())
-      .toList();
+      .collect(Collectors.toList());
   }
 
   public Optional<Cell<?>> get(int row, int col) {
